# Linux-Inter-Process-Communication

./: CMakeLists.txt  README.md  intersections.py  ipc.cpp  rgen.cpp  short-path.cpp
